completed the ui

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!-- title -->
-    <title>React App</title>
+    <title>Weather App By React</title>
   </head>
   <body>
 
